# Vaise

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: build-apps.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: search.ts  tauri.ts  types.ts
