[package]
name = "vaise"
version = "0.1.0"
description = "A keyboard cheat sheet launcher built with Tauri"
authors = ["brainrepo"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
image = { version = "0.25.8", default-features = false, features = ["png"] }
objc2-app-kit = { version = "0.3.2", features = ["NSWindow"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.3.1", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-global-shortcut = "2.2.0"
tauri-plugin-opener = "2.2.6"

[features]
custom-protocol = ["tauri/custom-protocol"]
